--- a/w1/index.html
+++ b/w1/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="John Sarcione">
     <meta name="desription" content="W1 HW">
+    <meta name="author" content="John Sarcione">
         <title>W1 | About JR</title>
 </head>
 <body>
-    
+    <div style="border: 2px solid blue;">
+        <h1 style="border: 2px solid violet;color: red;">John Sarcione</h1>
+        <p style="border: 2px solid green; ">Hello! My name is <b>John Sarcione</b> and I am a student at <u>New England Tech </u> studying <i>Cybersecurity and Network Engineering</i>. I am from Attleboro Massachusetts and work at Helix Esports at Patriot Place. It is a video game center under OXG Esports. We have a pro CoD team called the <b>Boston Breach</b> and a pro OWL team called <b>Boston Uprising.</b> As someone who enjoys playing video games and competitive CoD, this job is perfect for me. I also enjoy listening to live music and playing with my dog Mando.</p>
+    </div>
 </body>
 </html>
