--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -8,7 +8,16 @@
     <meta name="descrition" content="W4 Demo">
     <title>W4 Demo</title>
 </head>
-<body>
+<body style="background-color: beige;">
+    <style>
+        .link 
+        {
+            margin-right:15px;
+            text-decoration:none;
+            font-size:20px;
+        }
+    </style>
+    </body>
     
     <div id="container">
 
