--- a/w6_demo/index.html
+++ b/w6_demo/index.html
@@ -14,9 +14,23 @@
     </style>
 </head>
 <body>
-    <h1>Week 6 Intro Demo</h1>
+    <h1>Week 6 Intro Demo | Javascript</h1>
     <script>
-        
+        var num1 = 20
+        var num2 = 7
+
+        var sum = num1 + num2
+
+        //alert("hello world!")
+
+        console.log("hi universe")
+
+        console.log(`The sum is:${sum}`)
+
+        var fname = prompt("Enter your name:")
+        alert(`Hi there ${fname}`)
+
+        var age = prompt(`Enter your age: `)
     </script>
 </body>
 </html>
